--- a/styles/style.css
+++ b/styles/style.css
@@ -77,23 +77,10 @@ nav .groupButtonsNav .themeButton {
   display: flex;
 }
 
-nav .groupButtonsNav .themeButton .close {
-  padding: 0.4rem;
-  border-left: none;
-}
-
-nav .groupButtonsNav .navLink {
-  text-decoration: none;
-  font-family: "Chakra Petch";
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-}
-
-.themesList {
+nav .groupButtonsNav .themeButton .themesList {
+  -webkit-transform: translate(0, 2.2rem);
+          transform: translate(0, 2.2rem);
   position: absolute;
-  -webkit-transform: translate(0, -0.5rem);
-          transform: translate(0, -0.5rem);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -101,17 +88,16 @@ nav .groupButtonsNav .navLink {
   -webkit-box-direction: normal;
       -ms-flex-flow: column nowrap;
           flex-flow: column nowrap;
-  margin: 0 16% 0 70.6%;
   width: 10.45rem;
 }
 
-.themesList .themeList {
+nav .groupButtonsNav .themeButton .themesList .themeList {
   background: #e6e6e6;
   -webkit-box-shadow: inset -2px -2px 0 0 #b4b4b4, inset 2px 2px 0 0 #ffffff;
           box-shadow: inset -2px -2px 0 0 #b4b4b4, inset 2px 2px 0 0 #ffffff;
 }
 
-.themesList .themeList li {
+nav .groupButtonsNav .themeButton .themesList .themeList li {
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -125,7 +111,7 @@ nav .groupButtonsNav .navLink {
           align-items: center;
 }
 
-.themesList .themeList li .selectedTheme {
+nav .groupButtonsNav .themeButton .themesList .themeList li .selectedTheme {
   margin: 5%;
   width: 90%;
   background: #fff4fd;
@@ -137,5 +123,18 @@ nav .groupButtonsNav .navLink {
   color: #110038;
   letter-spacing: 0;
   line-height: 22px;
+}
+
+nav .groupButtonsNav .themeButton .close {
+  padding: 0.4rem;
+  border-left: none;
+}
+
+nav .groupButtonsNav .navLink {
+  text-decoration: none;
+  font-family: "Chakra Petch";
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 /*# sourceMappingURL=style.css.map */
