--- a/styles/style.scss
+++ b/styles/style.scss
@@ -8,16 +8,14 @@
   text-decoration: underline;
 }
 
-header {
-  .windowTitle {
-    background-image: linear-gradient(270deg, #f7c9f3 0%, #4180f6 100%);
-    box-shadow: 0 1px 0 0 #110038;
-    .windowText {
-      font-family: "Chakra Petch";
-      font-size: 12px;
-      color: #ffffff;
-      letter-spacing: 0;
-    }
+.windowTitle {
+  background-image: linear-gradient(270deg, #f7c9f3 0%, #4180f6 100%);
+  box-shadow: 0 1px 0 0 #110038;
+  .windowText {
+    font-family: "Chakra Petch";
+    font-size: 12px;
+    color: #ffffff;
+    letter-spacing: 0;
   }
 }
 
@@ -53,7 +51,7 @@ nav {
       .themesList {
         transform: translate(0, 2.2rem);
         position: absolute;
-        display: flex;
+        display: none;
         flex-flow: column nowrap;
         width: 10.45rem;
         .themeList {
@@ -89,6 +87,43 @@ nav {
       text-decoration: none;
       font-family: "Chakra Petch";
       align-self: center;
+    }
+  }
+}
+
+.searchBar {
+  display: flex;
+  flex-flow: row wrap;
+  align-self: center;
+  width: 80%;
+  margin: 0 10% 0 10%;
+  padding-top: 2.4rem;
+  .windowTitle {
+    width: 100%;
+  }
+  .bodyBar {
+    background: #e6e6e6;
+    box-shadow: inset -2px -2px 0 0 #b4b4b4, inset 2px 2px 0 0 #ffffff;
+    width: 100%;
+    #userSearch {
+      background: #ffffff;
+      border: 1px solid #979797;
+      box-shadow: inset -2px -2px 0 0 #e6e6e6, inset 2px 2px 0 0 #000000;
+      width: 88%;
+      margin: 0.7rem 1rem 0.7rem 1rem;
+      padding: 0.8rem 0 0.8rem 1rem;
+    }
+    .searchButton {
+      background: #e6e6e6;
+      border: 1px solid #808080;
+      box-shadow: inset -1px -1px 0 0 #b4b4b4, inset 1px 1px 0 0 #ffffff;
+      padding: 0.6% 0.8% 0.6% 0.8%;
+      ///TEXT
+      font-family: "Chakra Petch";
+      font-size: 16px;
+      color: #b4b4b4;
+      letter-spacing: 0;
+      line-height: 18px;
     }
   }
 }
