--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,7 +1,14 @@
+@import url("https://fonts.googleapis.com/css?family=Chakra+Petch&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Chakra Petch";
+}
+
+button {
+  cursor: pointer;
 }
 
 .underline {
@@ -11,11 +18,23 @@
 .windowTitle {
   background-image: linear-gradient(270deg, #f7c9f3 0%, #4180f6 100%);
   box-shadow: 0 1px 0 0 #110038;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
   .windowText {
+    padding: 0.2vw;
     font-family: "Chakra Petch";
     font-size: 12px;
     color: #ffffff;
     letter-spacing: 0;
+  }
+  .closeWindow {
+    height: 15.5px;
+    margin: 0 1% 0 0;
+    &:after {
+      content: url("../assets/buttonClose.svg");
+    }
   }
 }
 
@@ -106,10 +125,11 @@ nav {
     box-shadow: inset -2px -2px 0 0 #b4b4b4, inset 2px 2px 0 0 #ffffff;
     width: 100%;
     #userSearch {
+      font-family: "Chakra Petch";
       background: #ffffff;
       border: 1px solid #979797;
       box-shadow: inset -2px -2px 0 0 #e6e6e6, inset 2px 2px 0 0 #000000;
-      width: 88%;
+      width: 86%;
       margin: 0.7rem 1rem 0.7rem 1rem;
       padding: 0.8rem 0 0.8rem 1rem;
     }
@@ -117,13 +137,157 @@ nav {
       background: #e6e6e6;
       border: 1px solid #808080;
       box-shadow: inset -1px -1px 0 0 #b4b4b4, inset 1px 1px 0 0 #ffffff;
-      padding: 0.6% 0.8% 0.6% 0.8%;
+      width: 9%;
+      padding: 0.6% 0.8% 0.6% 0%;
       ///TEXT
       font-family: "Chakra Petch";
       font-size: 16px;
       color: #b4b4b4;
       letter-spacing: 0;
       line-height: 18px;
+    }
+  }
+  .searchOptions {
+    position: absolute;
+    width: 67.35rem;
+    transform: translate(0, 5.5rem);
+    background: #e6e6e6;
+    box-shadow: inset -2px -2px 0 0 #b4b4b4, inset 2px 2px 0 0 #ffffff;
+    display: none;
+    flex-flow: column nowrap;
+    .optionSearch {
+      width: 88%;
+      margin: 0.4rem 1rem 0.4rem 1rem;
+      padding: 0.3rem 0 0.3rem 1rem;
+      background: #f0f0f0;
+      border: 1px solid #808080;
+      box-shadow: inset -1px -1px 0 0 #b4b4b4, inset 1px 1px 0 0 #ffffff;
+      font-family: "Chakra Petch";
+      font-size: 16px;
+      color: #110038;
+      letter-spacing: 0;
+      line-height: 22px;
+    }
+    .selectedSearch {
+      background: #e6e6e6;
+      border: 1px solid #110038;
+    }
+  }
+}
+
+.results {
+  width: 80%;
+  margin: 0 10% 0 10%;
+  padding-top: 2.4rem;
+  .suggest {
+    background: #fffafe;
+    border: 1px solid #e6bbe2;
+    box-shadow: inset -2px -2px 0 0 #e6dce4, inset 2px 2px 0 0 #80687d;
+    margin: 0 0 15px 0;
+    .suggestText {
+      margin: 0.4%;
+    }
+  }
+  .tendences {
+    background: #fffafe;
+    border: 1px solid #e6bbe2;
+    box-shadow: inset -2px -2px 0 0 #e6dce4, inset 2px 2px 0 0 #80687d;
+    margin: 0 0 15px 0;
+    .tendencesText {
+      margin: 0.4%;
+    }
+  }
+  .searchResults {
+    background: #fffafe;
+    border: 1px solid #e6bbe2;
+    box-shadow: inset -2px -2px 0 0 #e6dce4, inset 2px 2px 0 0 #80687d;
+    margin: 0 0 15px 0;
+    display: flex;
+    flex-flow: row wrap;
+    .searchText {
+      margin: 0.4%;
+    }
+  }
+}
+
+.gifsSpace {
+  // display: flex;
+  // flex-flow: row wrap;
+  // justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(4, 24%);
+  grid-gap: 1vw;
+  width: 100%;
+}
+
+.imageContainer {
+  // display: flex;
+  // flex-flow: row wrap;
+  // justify-content: center;
+  // grid-template-columns: repeat(auto-fit, minmax(50px, 100px));
+  height: 300px;
+  //sketch
+  //width: 23%;
+  background: #e6e6e6;
+  box-shadow: inset -2px -2px 0 0 #b4b4b4, inset 2px 2px 0 0 #ffffff;
+  padding: 0.2vw;
+
+  img {
+    width: 100%;
+    height: 260px;
+    // align-self: center;
+    // width: 18.5vw;
+    // height: 16vw;
+  }
+  .buttonMore {
+    //Sketch
+    background: #4180f6;
+    border: 1px solid #4c2f99;
+    box-shadow: inset -2px -2px 0 0 #284f99, inset 2px 2px 0 0 #ffffff;
+    //mio
+    color: white;
+    padding: .5vw .7vw .5vw .7vw;
+    transform: translate(1vw, -4.5vw);
+  }
+  .tagVar{
+    //Skectch
+    transform: translate(0vw, -3.5vw);
+    box-shadow: none;
+  }
+}
+
+#suggestGifs{
+  .imageContainer{
+    height: 290px;
+    &:hover{
+      
+    }
+    .windowTitle{
+    }
+    .buttonMore{
+    }
+    .tagVar{
+      display: none;
+    }
+  }
+}
+
+#tendencesGifs{
+  .imageContainer{
+    height: 264px;
+    &:hover{
+      .tagVar{
+        display: flex;
+      }
+    }
+    .windowTitle{
+      display: none;
+    }
+    .buttonMore{
+      display: none;
+    }
+    .tagVar{
+      transform: translate(0vw, -1.88vw);
     }
   }
 }
