--- a/styles/style.scss
+++ b/styles/style.scss
@@ -58,21 +58,35 @@ nav {
     letter-spacing: 0;
     text-align: center;
     line-height: 18px;
+    &:hover {
+      color: #110038;
+      outline: 0.2px dotted #110038;
+      outline-offset: -5px;
+      filter: brightness(0.9);
+    }
   }
   .groupButtonsNav {
-    width: 40%;
+    width: 45%;
     align-self: center;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-evenly;
     .themeButton {
       display: flex;
+      &:hover {
+        .navButton {
+          color: #110038;
+          outline: 0.2px dotted #110038;
+          outline-offset: -5px;
+          filter: brightness(0.9);
+        }
+      }
       .themesList {
         transform: translate(0, 2.2rem);
         position: absolute;
         display: none;
         flex-flow: column nowrap;
-        width: 10.45rem;
+        width: 11.2rem;
         .themeList {
           background: #e6e6e6;
           box-shadow: inset -2px -2px 0 0 #b4b4b4, inset 2px 2px 0 0 #ffffff;
@@ -98,7 +112,7 @@ nav {
       }
 
       .close {
-        padding: 0.4rem;
+        padding: 0 0.8rem 0 0.8rem;
         border-left: none;
       }
     }
@@ -106,6 +120,15 @@ nav {
       text-decoration: none;
       font-family: "Chakra Petch";
       align-self: center;
+      &:hover {
+        color: #110038;
+        outline: 0.2px dotted #110038;
+        outline-offset: 5px;
+        filter: brightness(0.9);
+      }
+      &:active{
+        color: #cca6c9;
+      }
     }
   }
 }
@@ -175,6 +198,19 @@ nav {
   }
 }
 
+#tagButtons{
+  margin: 0.5rem 0 0 0;
+  .tagButton{
+    margin: 0 0.5rem 0 0;
+    background: #4180f6;
+    border: 1px solid #4c2f99;
+    box-shadow: inset -2px -2px 0 0 #284f99, inset 2px 2px 0 0 #ffffff;
+    //mio
+    color: white;
+    padding: 0.5vw 0.7vw 0.5vw 0.7vw;
+  }
+}
+
 .results {
   width: 80%;
   margin: 0 10% 0 10%;
@@ -218,6 +254,7 @@ nav {
   grid-template-columns: repeat(4, 24%);
   grid-gap: 1vw;
   width: 100%;
+  margin: 0 0 35px 0;
 }
 
 .imageContainer {
@@ -231,8 +268,20 @@ nav {
   background: #e6e6e6;
   box-shadow: inset -2px -2px 0 0 #b4b4b4, inset 2px 2px 0 0 #ffffff;
   padding: 0.2vw;
-
-  img {
+  &:hover {
+    .imageGif {
+      //sketch
+      outline: 0.2px dotted #110038;
+      outline-offset: -5px;
+      filter: brightness(0.9);
+    }
+    .buttonMore {
+      outline: 0.2px dotted #110038;
+      outline-offset: -5px;
+      filter: brightness(0.9);
+    }
+  }
+  .imageGif {
     width: 100%;
     height: 260px;
     // align-self: center;
@@ -246,48 +295,75 @@ nav {
     box-shadow: inset -2px -2px 0 0 #284f99, inset 2px 2px 0 0 #ffffff;
     //mio
     color: white;
-    padding: .5vw .7vw .5vw .7vw;
+    padding: 0.5vw 0.7vw 0.5vw 0.7vw;
     transform: translate(1vw, -4.5vw);
   }
-  .tagVar{
+  .tagVar {
     //Skectch
     transform: translate(0vw, -3.5vw);
     box-shadow: none;
   }
 }
 
-#suggestGifs{
-  .imageContainer{
+#suggestGifs {
+  .imageContainer {
     height: 290px;
-    &:hover{
-      
+    &:hover {
     }
-    .windowTitle{
+    .windowTitle {
     }
-    .buttonMore{
+    .buttonMore {
     }
-    .tagVar{
+    .tagVar {
       display: none;
     }
   }
 }
 
-#tendencesGifs{
-  .imageContainer{
+#searchArea{
+  display: none;
+  .imageContainer {
     height: 264px;
-    &:hover{
-      .tagVar{
+    &:hover {
+      .tagVar {
         display: flex;
       }
     }
-    .windowTitle{
+    .windowTitle {
       display: none;
     }
-    .buttonMore{
+    .buttonMore {
       display: none;
     }
-    .tagVar{
+    .tagVar {
       transform: translate(0vw, -1.88vw);
     }
   }
+}
+
+#tendencesGifs {
+  .imageContainer {
+    height: 264px;
+    &:hover {
+      .tagVar {
+        display: flex;
+      }
+    }
+    .windowTitle {
+      display: none;
+    }
+    .buttonMore {
+      display: none;
+    }
+    .tagVar {
+      transform: translate(0vw, -1.88vw);
+    }
+  }
+}
+
+.outline {
+  color: #110038;
+  outline: 0.2px dotted #110038;
+  outline-offset: -5px;
+  filter: brightness(0.9);
 }
