--- a/styles/styleNight.css
+++ b/styles/styleNight.css
@@ -74,6 +74,10 @@ nav {
   padding-top: 2.4rem;
 }
 
+nav .brand a::after {
+  content: url("../assets/gifOF_logo_dark.png");
+}
+
 nav .navButton {
   padding: 0.5rem 1.8rem 0.5rem 1.8rem;
   background: #ee3efe;
@@ -89,7 +93,7 @@ nav .navButton {
 }
 
 nav .navButton:hover {
-  color: #110038;
+  color: white;
   outline: 0.2px dotted #110038;
   outline-offset: -5px;
   -webkit-filter: brightness(0.9);
@@ -159,17 +163,25 @@ nav .groupButtonsNav .themeButton .themesList .themeList li {
 }
 
 nav .groupButtonsNav .themeButton .themesList .themeList li .selectedTheme {
-  margin: 5%;
+  margin: 3%;
+  padding: 3% 0 3% 0;
   width: 90%;
-  background: #fff4fd;
-  border: 1px solid #cca6c9;
-  -webkit-box-shadow: inset -1px -1px 0 0 #e6dce4, inset 1px 1px 0 0 #ffffff;
-          box-shadow: inset -1px -1px 0 0 #e6dce4, inset 1px 1px 0 0 #ffffff;
-  font-family: "Chakra Petch";
+  background: #cccccc;
+  border: 1px solid #808080;
+  -webkit-box-shadow: inset -1px -1px 0 0 #b4b4b4, inset 1px 1px 0 0 #ffffff;
+          box-shadow: inset -1px -1px 0 0 #b4b4b4, inset 1px 1px 0 0 #ffffff;
   font-size: 16px;
   color: #110038;
   letter-spacing: 0;
   line-height: 22px;
+}
+
+nav .groupButtonsNav .themeButton .themesList .themeList li .activeTheme {
+  color: white;
+  background: #2e32fb;
+  border: 1px solid rgba(51, 53, 143, 0.2);
+  -webkit-box-shadow: inset -1px -1px 0 0 #e6dce4, inset 1px 1px 0 0 #ffffff;
+          box-shadow: inset -1px -1px 0 0 #e6dce4, inset 1px 1px 0 0 #ffffff;
 }
 
 nav .groupButtonsNav .themeButton .close {
@@ -242,17 +254,17 @@ nav .groupButtonsNav .navLink:active {
   width: 9%;
   padding: 0.6% 0.8% 0.6% 0%;
   font-size: 16px;
-  color: #8F8F8F;
+  color: #8f8f8f;
   letter-spacing: 0;
   line-height: 18px;
 }
 
 .searchBar .bodyBar .buttonActive {
   color: white;
-  background: #EE3EFE;
+  background: #ee3efe;
   border: 1px solid #110038;
-  -webkit-box-shadow: inset -1px -1px 0 0 #A72CB3, inset 1px 1px 0 0 #FFFFFF;
-          box-shadow: inset -1px -1px 0 0 #A72CB3, inset 1px 1px 0 0 #FFFFFF;
+  -webkit-box-shadow: inset -1px -1px 0 0 #a72cb3, inset 1px 1px 0 0 #ffffff;
+          box-shadow: inset -1px -1px 0 0 #a72cb3, inset 1px 1px 0 0 #ffffff;
 }
 
 .searchBar .searchOptions {
@@ -756,10 +768,11 @@ nav .groupButtonsNav .navLink:active {
 }
 
 .recordGifWindow .actions .captureGif .startGif {
-  background: #f7c9f3;
+  color: white;
+  background: #ee3efe;
   border: 1px solid #110038;
-  -webkit-box-shadow: inset -1px -1px 0 0 #997d97, inset 1px 1px 0 0 #ffffff;
-          box-shadow: inset -1px -1px 0 0 #997d97, inset 1px 1px 0 0 #ffffff;
+  -webkit-box-shadow: inset -1px -1px 0 0 #a72cb3, inset 1px 1px 0 0 #ffffff;
+          box-shadow: inset -1px -1px 0 0 #a72cb3, inset 1px 1px 0 0 #ffffff;
 }
 
 .recordGifWindow .actions .recordingGif {
@@ -781,11 +794,15 @@ nav .groupButtonsNav .navLink:active {
 }
 
 .recordGifWindow .actions .recordingGif .capButton .text {
-  padding: 0 3vw 0 3vw;
-  color: white;
+  padding: 0.5vw 2vw 0.5vw 2vw;
+}
+
+.recordGifWindow .actions .recordingGif .capButton .icon {
+  padding: 0 1vw 0 1vw;
 }
 
 .recordGifWindow .actions .recordingGif .capButton .endGif {
+  color: white;
   background: #ff6161;
   border: 1px solid #110038;
   -webkit-box-shadow: inset -1px -1px 0 0 #993a3a, inset 1px 1px 0 0 #ffffff;
@@ -822,6 +839,14 @@ nav .groupButtonsNav .navLink:active {
   border: 1px solid #110038;
   -webkit-box-shadow: inset -1px -1px 0 0 #997d97, inset 1px 1px 0 0 #ffffff;
           box-shadow: inset -1px -1px 0 0 #997d97, inset 1px 1px 0 0 #ffffff;
+}
+
+.recordGifWindow .actions .cancelAction .text {
+  padding: 0.5vw 2vw 0.5vw 2vw;
+}
+
+.recordGifWindow .actions .cancelAction .icon {
+  padding: 0 1vw 0 1vw;
 }
 
 .recordGifWindow .actions .finishAction {
@@ -886,6 +911,10 @@ nav .groupButtonsNav .navLink:active {
 
 .recordGifWindow .actions .forwardGif .progressVar .forwardView {
   width: 100px;
+  background: #b4b4b4;
+  border: 1px solid #979797;
+  -webkit-box-shadow: inset 2px 2px 0 0 #e6e6e6, inset -2px -2px 0 0 #000000;
+          box-shadow: inset 2px 2px 0 0 #e6e6e6, inset -2px -2px 0 0 #000000;
 }
 
 .recordGifWindow .actions .forwardGif .groupButtons {
@@ -897,16 +926,24 @@ nav .groupButtonsNav .navLink:active {
 .recordGifWindow .actions .forwardGif .groupButtons .repeatGif {
   margin: 0 1vw 0 0;
   font-size: 16px;
-  color: #110038;
+  color: white;
   letter-spacing: 0;
   text-align: center;
   line-height: 18px;
   width: 12vw;
   height: 2vw;
-  background: #fff4fd;
-  border: 1px solid #110038;
-  -webkit-box-shadow: inset -1px -1px 0 0 #997d97, inset 1px 1px 0 0 #ffffff;
-          box-shadow: inset -1px -1px 0 0 #997d97, inset 1px 1px 0 0 #ffffff;
+  background: #110038;
+  border: 1px solid #b4b4b4;
+  -webkit-box-shadow: inset -1px -1px 0 0 #5c5c5c, inset 1px 1px 0 0 #fff4fd;
+          box-shadow: inset -1px -1px 0 0 #5c5c5c, inset 1px 1px 0 0 #fff4fd;
+}
+
+.recordGifWindow .actions .forwardGif .groupButtons .repeatGif:hover {
+  color: white;
+  outline: 0.2px dotted white;
+  outline-offset: -5px;
+  -webkit-filter: brightness(0.9);
+          filter: brightness(0.9);
 }
 
 .recordGifWindow .actions .forwardGif .groupButtons .uploadGif {
