--- a/styles/styleNight.scss
+++ b/styles/styleNight.scss
@@ -49,7 +49,13 @@ nav {
   margin: 0 10% 0 10%;
   justify-content: space-between;
   padding-top: 2.4rem;
-
+  .brand {
+    a {
+      &::after {
+        content: url("../assets/gifOF_logo_dark.png");
+      }
+    }
+  }
   .navButton {
     padding: 0.5rem 1.8rem 0.5rem 1.8rem;
     background: #ee3efe;
@@ -62,7 +68,7 @@ nav {
     text-align: center;
     line-height: 18px;
     &:hover {
-      color: #110038;
+      color: white;
       outline: 0.2px dotted #110038;
       outline-offset: -5px;
       filter: brightness(0.9);
@@ -99,16 +105,22 @@ nav {
             flex-flow: column nowrap;
             align-items: center;
             .selectedTheme {
-              margin: 5%;
+              margin: 3%;
+              padding: 3% 0 3% 0;
               width: 90%;
-              background: #fff4fd;
-              border: 1px solid #cca6c9;
-              box-shadow: inset -1px -1px 0 0 #e6dce4, inset 1px 1px 0 0 #ffffff;
-              font-family: "Chakra Petch";
+              background: #cccccc;
+              border: 1px solid #808080;
+              box-shadow: inset -1px -1px 0 0 #b4b4b4, inset 1px 1px 0 0 #ffffff;
               font-size: 16px;
               color: #110038;
               letter-spacing: 0;
               line-height: 22px;
+            }
+            .activeTheme {
+              color: white;
+              background: #2e32fb;
+              border: 1px solid rgba(51, 53, 143, 0.2);
+              box-shadow: inset -1px -1px 0 0 #e6dce4, inset 1px 1px 0 0 #ffffff;
             }
           }
         }
@@ -135,8 +147,6 @@ nav {
     }
   }
 }
-
-
 
 .searchBar {
   display: flex;
@@ -169,15 +179,15 @@ nav {
       padding: 0.6% 0.8% 0.6% 0%;
       ///TEXT
       font-size: 16px;
-      color: #8F8F8F;
+      color: #8f8f8f;
       letter-spacing: 0;
       line-height: 18px;
     }
-    .buttonActive{
+    .buttonActive {
       color: white;
-      background: #EE3EFE;
-    border: 1px solid #110038;
-    box-shadow: inset -1px -1px 0 0 #A72CB3, inset 1px 1px 0 0 #FFFFFF;
+      background: #ee3efe;
+      border: 1px solid #110038;
+      box-shadow: inset -1px -1px 0 0 #a72cb3, inset 1px 1px 0 0 #ffffff;
     }
   }
   .searchOptions {
@@ -207,7 +217,6 @@ nav {
     }
   }
 }
-
 
 #tagButtons {
   margin: 0.5rem 0 0 0;
@@ -576,9 +585,10 @@ nav {
       justify-content: flex-end;
 
       .startGif {
-        background: #f7c9f3;
+        color: white;
+        background: #ee3efe;
         border: 1px solid #110038;
-        box-shadow: inset -1px -1px 0 0 #997d97, inset 1px 1px 0 0 #ffffff;
+        box-shadow: inset -1px -1px 0 0 #a72cb3, inset 1px 1px 0 0 #ffffff;
       }
     }
     .recordingGif {
@@ -589,10 +599,13 @@ nav {
       .capButton {
         display: flex;
         .text {
-          padding: 0 3vw 0 3vw;
-          color: white;
+          padding: 0.5vw 2vw 0.5vw 2vw;
+        }
+        .icon {
+          padding: 0 1vw 0 1vw;
         }
         .endGif {
+          color: white;
           background: #ff6161;
           border: 1px solid #110038;
           box-shadow: inset -1px -1px 0 0 #993a3a, inset 1px 1px 0 0 #ffffff;
@@ -623,6 +636,12 @@ nav {
         background: #fff4fd;
         border: 1px solid #110038;
         box-shadow: inset -1px -1px 0 0 #997d97, inset 1px 1px 0 0 #ffffff;
+      }
+      .text {
+        padding: 0.5vw 2vw 0.5vw 2vw;
+      }
+      .icon {
+        padding: 0 1vw 0 1vw;
       }
     }
     .finishAction {
@@ -668,6 +687,9 @@ nav {
         }
         .forwardView {
           width: 100px;
+          background: #b4b4b4;
+          border: 1px solid #979797;
+          box-shadow: inset 2px 2px 0 0 #e6e6e6, inset -2px -2px 0 0 #000000;
         }
       }
       .groupButtons {
@@ -675,15 +697,21 @@ nav {
         .repeatGif {
           margin: 0 1vw 0 0;
           font-size: 16px;
-          color: #110038;
+          color: white;
           letter-spacing: 0;
           text-align: center;
           line-height: 18px;
           width: 12vw;
           height: 2vw;
-          background: #fff4fd;
-          border: 1px solid #110038;
-          box-shadow: inset -1px -1px 0 0 #997d97, inset 1px 1px 0 0 #ffffff;
+          background: #110038;
+          border: 1px solid #b4b4b4;
+          box-shadow: inset -1px -1px 0 0 #5c5c5c, inset 1px 1px 0 0 #fff4fd;
+          &:hover {
+            color: white;
+            outline: 0.2px dotted white;
+            outline-offset: -5px;
+            filter: brightness(0.9);
+          }
         }
         .uploadGif {
           width: 12vw;
