--- a/styles/styleNight.scss
+++ b/styles/styleNight.scss
@@ -192,7 +192,7 @@ nav {
   }
   .searchOptions {
     position: absolute;
-    width: 67.35rem;
+    width: 80%;
     transform: translate(0, 5.5rem);
     background: #b4b4b4;
     box-shadow: inset -2px -2px 0 0 #8f8f8f, inset 2px 2px 0 0 #ffffff;
@@ -276,15 +276,14 @@ nav {
 }
 
 .gifsSpace {
-  // display: flex;
-  // flex-flow: row wrap;
-  // justify-content: space-around;
   display: grid;
   grid-template-columns: repeat(4, 24%);
   grid-gap: 1vw;
   width: 100%;
   margin: 0 0 35px 0;
 }
+
+
 
 .imageContainer {
   // display: flex;
@@ -727,5 +726,24 @@ nav {
         }
       }
     }
+  }
+}
+
+@media only screen and (max-width: 780px) {
+  #userSearch {
+    font-family: "Chakra Petch";
+    background: #ffffff;
+    border: 1px solid #979797;
+    box-shadow: inset -2px -2px 0 0 #e6e6e6, inset 2px 2px 0 0 #000000;
+    width: 80%;
+    margin: 0.7rem 1rem 0.7rem 1rem;
+    padding: 0.8rem 0 0.8rem 1rem;
+  }
+  .gifsSpace {
+    display: grid;
+    grid-template-columns: repeat(2, 48%);
+    grid-gap: 1vw;
+    width: 100%;
+    margin: 0 0 35px 0;
   }
 }
